2008-09-02  Esteban Sanchez  <estebans@artica.es>
	
	* install.php: Delete install file on step 5.

2008-09-02  Esteban Sanchez  <estebans@artica.es>

	* install.php: Set config file permissions on step 5 so it doesn't
	warn about it once installed.

2008-09-02  Esteban Sanchez  <estebans@artica.es>

	* integria_db.sql: New tables added relatives to inventory.

	* include/functions_html.php: Added to repository.

	* general/error_perms.php: Style correction.

	* include/config_process.php: Style correction. Use database
	functions. Removed useless code.

	* include/functions.php: Avoid using $lang_label. Style correction.
	Added get_indicent_priorities().

	* include/functions_db.php: Added new functions. Renamed give_db_* to
	get_db_*. Style correction.

2008-09-01  Sancho Lerena <slerena@gmail.com>

	* (Several files)  Several changes to make it render properly in IEa

	* functions_db.php,
	* functions.php: Output ascii was not using proper function
	to decode html entities. FIxed and passed siubject for the
	filter too.
	
	* integria.css: Starting to do things to render
	properly in IE.
	
	* functions_db.php: This should fix the mails with anoying 
	HTML entities.

2008-08-05  Sancho Lerena <slerena@gmail.com>

	* integria_db.sql: Added end field to task.

	* operation/projects/task_detail.php: Added end field.

	* operation/projects/gantt_graph.php: Added end field on task
	and removed previous code to recalculate using hours assigned.

	* operation/projects/task.php: Added end field.

	* include/functions.php: Added functions clean_output and remove_locale_chars.

2008-07-29  Sancho Lerena <slerena@gmail.com>
	
	* operation/kb/browse_data.php: New page to vide KB items.

	* operation/kb/manage_prod.php: Solved some minor bugs.

	* operation/kb/manage_data.php: Solved some minor bugs.

	* operation/kb/browse.php: New page to browse/search
	KB items.

	* operation/side_menu.php: Delete KB Search (nosense)
